# plate_number_recognition

./: .gitignore  README.md  app.py  main.py  pyproject.toml
src/: plate_detection.py  plate_recognition.py  toll_database.py
