[project]
name = "plate-number-recognition"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "db-sqlite3>=0.0.1",
    "easyocr>=1.7.2",
    "opencv-python>=4.11.0.86",
    "paddleocr>=3.2.0",
    "paddlepaddle>=3.1.1",
    "transformers>=4.56.0",
    "ultralytics>=8.3.189",
]
